Fix the program list alignment issue
After like 2 years but yes

--- a/src/main.css
+++ b/src/main.css
@@ -2221,11 +2221,11 @@ html {
   }
   li {
       display: flex;
-      justify-content: stretch;
       padding: 5px;
       padding-left: 20px;
       border-bottom: 1px solid #ccc;
   }
   .left {
       font-weight: bold;
+      min-width: 160px;
   }
